clusters/my-cluster/Bookstack/bookstack.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack
  namespace: default
  labels:
    app: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
        app.kubernetes.io/name: bookstack
    spec:
      containers:
      - name: bookstack
        image: linuxserver/bookstack:latest
        livenessProbe:
          httpGet:
            path: /status
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 3
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/config"
          name: bookstack-config
      volumes:
      - name: bookstack-config
        persistentVolumeClaim:
          claimName: bookstack-cephfs-pvc
