clusters/my-cluster/Bookstack/bookstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  labels:
    app: bookstack
spec:
  selector:
    app: bookstack
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
