clusters/my-cluster/Bookstack/bookstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: bookstack.swages.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 80
